# simple-agentic-coder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agentic-coder/: .env  main.py  requirements.txt
agentic-coder/config/: settings.py
agentic-coder/core/: commands.py  context.py  engine.py  exceptions.py  llm.py  prompts.py  session.py  state.py
agentic-coder/dev_docs/: project_analysis.md
agentic-coder/test/: test_phase2_3_auto.py  test_phase2_3_manual.md  test_phase2_auto.py  test_phase3_auto.py
agentic-coder/tools/: agent_tools.py  fs.py  registry.py  shell.py
agentic-coder/ui/: console.py  hitl.py  input.py
agentic-coder/utils/: logger.py
agentic_coder/: .coder-rules  main.py  requirements.txt
agentic_coder/core/: commands.py  context.py  engine.py  llm.py  orchestrator.py  prompts.py  schemas.py  session.py  state.py  tasks.py
agentic_coder/test/: test_phase2_manual.md  test_phase3_manual.md
agentic_coder/tools/: agent_tools.py  fs.py  git.py  shell.py
agentic_coder/ui/: hitl.py
dev_docs/: document_v1.md  document_v2.md  document_v3.md  phase2_plan.md  phase3_plan.md
docs/en/: s01-agent-loop.md  s02-tool-dispatch.md  s03-system-prompt.md  s04-todo-write.md  s05-subagent.md  s06-context-compact.md  s07-permission.md  s08-git-integration.md  s09-background.md  s10-complete.md
docs/zh/: s01-agent-loop.md  s02-tool-dispatch.md  s03-system-prompt.md  s04-todo-write.md  s05-subagent.md  s06-context-compact.md  s07-permission.md  s08-git-integration.md  s10-complete.md  (+1 more)
final/: __main__.py  compaction.py  config.py  loop.py  permissions.py
(+6 files in other folders)
