[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-coder"
version = "1.0.0"
description = "A CLI coding agent powered by Claude, with full tool calling, file control, and context management."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anthropic>=0.52.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "gitpython>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "build>=1.0.0"]

[project.scripts]
coder = "agentic_coder.main:main"

[tool.hatch.build.targets.wheel]
packages = ["agentic_coder"]
